--- a/trunk/comp_removed.tex
+++ b/trunk/comp_removed.tex
@@ -262,7 +262,7 @@ TOFlog\_mon      &    Rectangular Time-of-flight
       \hline
     \end{tabular}
     \caption{Contributed components of the \MCS\ library.}
-    \label{t:comp-misc}
+    \label{t:comp-contrib}
     }
   \end{center}
 \end{table}
