--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -463,7 +463,7 @@ component.
 This declares the definition and setting parameters of the component.
 The parameters define the characteristics of the component, and can be
 accessed from the \verb+DECLARE+, \verb+INITIALIZE+, \verb+TRACE+,
-\verb+FINALLY+, and \verb+MCDISPLAY+ sections (see below), as well as in \verb+EXTEND+ sections of the instrument definition (see section~\label{s:instrdefs}).
+\verb+FINALLY+, and \verb+MCDISPLAY+ sections (see below), as well as in \verb+EXTEND+ sections of the instrument definition (see section~\ref{s:instrdefs}).
 \index{Parameters!Setting}
 \index{Parameters!Definition}
 
@@ -491,7 +491,7 @@ component \verb+DECLARE+ section. If setting parameters were used, it
 would be necessary to allocate the arrays dynamically using {\em e.g.}\ 
 \verb+malloc()+.
 
-Setting parameters may optionally be declared to be of type \verb+int+ and \verb+char *+, just as in the instrument definition (see section~\label{s:instrdefs}).
+Setting parameters may optionally be declared to be of type \verb+int+ and \verb+char *+, just as in the instrument definition (see section~\ref{s:instrdefs}).
 
 \begin{quote}
   \texttt{OUTPUT} \texttt{PARAMETERS} $(s_1, s_2, \ldots)$
