--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -14,6 +14,9 @@
 \usepackage{citesort}
 % Create an index table
 \usepackage{makeidx}
+% For html links in install chapter (install latex2html package to get
+% this style)
+\usepackage{html}
 
 \newcommand{\smallverbatimfile}[1]{{\footnotesize\verbatimfile{#1}}}
 
@@ -79,6 +82,7 @@
 
 \include{intro}
 \include{changes}
+\include{install}
 \include{running}
 \include{kernel}
 \include{techniq}
